--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-﻿<!--  Add some general comments -->
-<!--  date, author and changes are good here -->
+﻿<!--  Binary Puzzle -->
+<!--  30/3/20 Benjamin Pearcy -->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <title>Binary Puzzle 6x6</title>
-    <script type='text/javascript'>  
-        //  21/7/19 - Basic Visual Studio Setup 
+    <script type='text/javascript'>
+        //  21/7/19 - Basic Visual Studio Setup
         //  May you can mount your site on GitHub and practice pushing changes??
 
     </script>
