Added grid and stylesheet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Binary Puzzle 6x6</title>
     <script type='text/javascript'>
     </script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload="arrView()">
     <!--  notes about modules  -->
@@ -15,6 +16,56 @@
         <h2>No frills with the layout</h2>
         <br />
         <br />
+        <table>
+          <tr>
+            <td><input type="text" class="numIn" id="A0" value=""></td>
+            <td><input type="text" class="numIn" id="A1" value=""></td>
+            <td><input type="text" class="numIn" id="A2" value=""></td>
+            <td><input type="text" class="numIn" id="A3" value=""></td>
+            <td><input type="text" class="numIn" id="A4" value=""></td>
+            <td><input type="text" class="numIn" id="A5" value=""></td>
+          </tr>
+          <tr>
+            <td><input type="text" class="numIn" id="B0" value=""></td>
+            <td><input type="text" class="numIn" id="B1" value=""></td>
+            <td><input type="text" class="numIn" id="B2" value=""></td>
+            <td><input type="text" class="numIn" id="B3" value=""></td>
+            <td><input type="text" class="numIn" id="B4" value=""></td>
+            <td><input type="text" class="numIn" id="B5" value=""></td>
+          </tr>
+          <<tr>
+            <td><input type="text" class="numIn" id="C0" value=""></td>
+            <td><input type="text" class="numIn" id="C1" value=""></td>
+            <td><input type="text" class="numIn" id="C2" value=""></td>
+            <td><input type="text" class="numIn" id="C3" value=""></td>
+            <td><input type="text" class="numIn" id="C4" value=""></td>
+            <td><input type="text" class="numIn" id="C5" value=""></td>
+          </tr>
+          <tr>
+            <td><input type="text" class="numIn" id="D0" value=""></td>
+            <td><input type="text" class="numIn" id="D1" value=""></td>
+            <td><input type="text" class="numIn" id="D2" value=""></td>
+            <td><input type="text" class="numIn" id="D3" value=""></td>
+            <td><input type="text" class="numIn" id="D4" value=""></td>
+            <td><input type="text" class="numIn" id="D5" value=""></td>
+          </tr>
+          <tr>
+            <td><input type="text" class="numIn" id="E0" value=""></td>
+            <td><input type="text" class="numIn" id="E1" value=""></td>
+            <td><input type="text" class="numIn" id="E2" value=""></td>
+            <td><input type="text" class="numIn" id="E3" value=""></td>
+            <td><input type="text" class="numIn" id="E4" value=""></td>
+            <td><input type="text" class="numIn" id="E5" value=""></td>
+          </tr>
+          <tr>
+            <td><input type="text" class="numIn" id="F0" value=""></td>
+            <td><input type="text" class="numIn" id="F1" value=""></td>
+            <td><input type="text" class="numIn" id="F2" value=""></td>
+            <td><input type="text" class="numIn" id="F3" value=""></td>
+            <td><input type="text" class="numIn" id="F4" value=""></td>
+            <td><input type="text" class="numIn" id="F5" value=""></td>
+          </tr>
+        </table>
     </form>
 </body>
 </html>
