--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Binary Puzzle 6x6</title>
-    <script type='text/javascript'>
-    </script>
+    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="arrView()">
