--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
 <head>
     <meta charset="utf-8">
     <title>Binary Puzzle 6x6</title>
-    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="arrView()">
+<body>
     <!--  notes about modules  -->
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
         <h2>No frills with the layout</h2>
         <br />
         <br />
-        <table>
+        <table class="gameboard">
           <tr>
             <td><input type="text" class="numIn" id="A0" value=""></td>
             <td><input type="text" class="numIn" id="A1" value=""></td>
@@ -32,7 +31,7 @@
             <td><input type="text" class="numIn" id="B4" value=""></td>
             <td><input type="text" class="numIn" id="B5" value=""></td>
           </tr>
-          <<tr>
+          <tr>
             <td><input type="text" class="numIn" id="C0" value=""></td>
             <td><input type="text" class="numIn" id="C1" value=""></td>
             <td><input type="text" class="numIn" id="C2" value=""></td>
@@ -66,5 +65,6 @@
           </tr>
         </table>
     </form>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
