Finished solution script

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </tr>
         </table>
     </form>
+    <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
