Started fillRows and finished fill Double

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </table>
     </form>
     <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
+    <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
