--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </form>
     <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
     <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
+    <input type="button" name="SolveC" value="Solve Cols" onclick="fillCols(grid);">
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
