--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
     <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
     <input type="button" name="SolveC" value="Solve Cols" onclick="fillCols(grid);">
+    <input type="button" name="SolveF" value="Solve V2" onclick="SolveV2(grid);">
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
