--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <!--  notes about modules  -->
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
-        <h2>No frills with the layout</h2>
+        <!-- <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
+        <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
+        <input type="button" name="SolveC" value="Solve Cols" onclick="fillCols(grid);">
+        <input type="button" name="SolveF" value="Solve V2" onclick="SolveV2(grid);"> -->
+        <div style="white-space: nowrap;">
+          <input class="button" onclick="SolveV2(grid);" value="Solve V2" readonly>
+          <input class="button" onclick="fillRows(grid);" value="Solve Rows" readonly>
+          <input class="button" onclick="fillCols(grid);" value="Solve Cols" readonly>
+          <input class="button" onclick="Solve(grid);" value="Solve Brute" readonly>
+        </div>
         <br />
         <br />
         <table class="gameboard">
@@ -65,10 +74,6 @@
           </tr>
         </table>
     </form>
-    <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
-    <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
-    <input type="button" name="SolveC" value="Solve Cols" onclick="fillCols(grid);">
-    <input type="button" name="SolveF" value="Solve V2" onclick="SolveV2(grid);">
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
