--- a/index.html
+++ b/index.html
@@ -7,22 +7,43 @@
     <title>Binary Puzzle 6x6</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: lightblue;">
     <!--  notes about modules  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 id='mainHead' style="text-align: center; font-family: 'Comic Sans MS'; color: red;">6x6 Binary Puzzle Game</h1>
         <!-- <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
         <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
         <input type="button" name="SolveC" value="Solve Cols" onclick="fillCols(grid);">
         <input type="button" name="SolveF" value="Solve V2" onclick="SolveV2(grid);"> -->
-        <div style="white-space: nowrap;">
+        <div>
           <input class="button" onclick="SolveV2(grid);" value="Solve V2" readonly>
           <input class="button" onclick="fillRows(grid);" value="Solve Rows" readonly>
           <input class="button" onclick="fillCols(grid);" value="Solve Cols" readonly>
           <input class="button" onclick="Solve(grid);" value="Solve Brute" readonly>
+          <input class="button" id='help' onclick="HelpBox();" value="Halp" readonly>
+        </div>
+        <div id='helpbox'>
+          <p>SolveV2: Loops through Solve Rows and Solve Cols until solved or not enough information.</p>
+          <p>Solve Rows:</p>
         </div>
         <br />
         <br />
+        <select class="" name="PuzzleSelector" onchange="fillGame(grid,ConvertLongToArr(eval(value)));">
+          <option value="G00">Game 0</option>
+          <option value="G01">Game 1</option>
+          <option value="G02">Game 2</option>
+          <option value="G03">Game 3</option>
+          <option value="G04">Game 4</option>
+          <option value="G05">Game 5</option>
+          <option value="G06">Game 6</option>
+          <option value="G07">Game 7</option>
+          <option value="G08">Game 8</option>
+          <option value="G09">Game 9</option>
+          <option value="G10">Game 10</option>
+          <option value="G11">Game 11</option>
+          <option value="G12">Game 12</option>
+          <option value="G13">Game 13</option>
+        </select>
         <table class="gameboard">
           <tr>
             <td><input type="text" class="numIn" id="A0" value=""></td>
