--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: lightblue;">
     <!--  notes about modules  -->
     <form id="input">
-        <h1 id='mainHead' style="text-align: center; font-family: 'Comic Sans MS'; color: red;">6x6 Binary Puzzle Game</h1>
+        <h1 id='mainHead' style="text-align: center;">6x6 Binary Puzzle Game</h1>
         <!-- <input type="button" name="Solve" value="Solve" onclick="Solve(grid);">
         <input type="button" name="SolveR" value="Solve Rows" onclick="fillRows(grid);">
         <input type="button" name="SolveC" value="Solve Cols" onclick="fillCols(grid);">
@@ -20,11 +20,14 @@
           <input class="button" onclick="fillRows(grid);" value="Solve Rows" readonly>
           <input class="button" onclick="fillCols(grid);" value="Solve Cols" readonly>
           <input class="button" onclick="Solve(grid);" value="Solve Brute" readonly>
-          <input class="button" id='help' onclick="HelpBox();" value="Halp" readonly>
+          <input class="button" id='help' onclick="HelpBox();" value="Help" readonly>
         </div>
         <div id='helpbox'>
           <p>SolveV2: Loops through Solve Rows and Solve Cols until solved or not enough information.</p>
-          <p>Solve Rows:</p>
+          <p>Solve Rows: Proceeds to add 1s on either side of '00' and a 1 in between '0 0' for each row.</p>
+          <p>Solve Cols: Identical to Solve Rows, just for columns instead.</p>
+          <p>Solve Brute: Brute forces it's way through every possible combination until it gets one that is valid.</p>
+          <p>Pressing '?': ???</p>
         </div>
         <br />
         <br />
